# basestation-classic

./: .gitignore  .gitmodules  Caddyfile  README.md  docker-compose.yml  flake.nix  package.json
.devcontainer/: .bashrc  Dockerfile  devcontainer.json  docker-compose.yml  starship.toml
.devcontainer/qgis-server/: Dockerfile
backend/: .gitignore  .gitmodules  README.md  pyproject.toml
backend/backend/: __init__.py  app.py
backend/interfaces/: CMakeLists.txt
backend/submodules/: __init__.py  anchor.py  antenna.py  arm.py  auto.py  bio.py  core.py  ptz.py  submodule.py
backend/tests/: __init__.py  list_types.py  test_client.py  test_rover.py  util.py
backend/util/: __init__.py  aiohttp_utils.py  websocket_types.py
frontend/: .gitignore  README.md  index.html  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.css  App.tsx  colors.css  config.ts  main.tsx
frontend/src/assets/models/: _AXIS_0.stl  _AXIS_1.stl  _AXIS_2.stl  _AXIS_3.stl  _AXIS_4.stl  _END_EFFECTOR.stl  _Turret_Assembly.stl  arm11.urdf
frontend/src/assets/shaders/: frag.glsl  vert.glsl
frontend/src/components/: BSDooM.tsx  Banner.tsx  Controller.tsx  MainContainers.tsx  Map.tsx
frontend/src/components/anchor/: Antenna.tsx  ResetLSS.tsx
frontend/src/components/arm/: ArmControl.tsx  ArmDigitFeedback.tsx  ArmIKControl.tsx  ArmManualControl.tsx  ArmSocketFeedback.tsx
frontend/src/components/arm-vis/: ArmVisCanvas.tsx  ArmVisDraw.tsx  Cargo.toml
frontend/src/components/arm-vis/src/: lib.rs  open_gl.rs  types.rs
frontend/src/components/bio/: BioComponents.tsx  BioControl.tsx  BioGimbal.tsx  CitadelVoltages.tsx
frontend/src/components/core/: CoreAutoFeedback.tsx  CoreDrivingControl.tsx  CoreDrivingFeedback.tsx  PtzControl.tsx
frontend/src/components/indicators/: AngleIndicator.tsx  ColoredIndicator.tsx  CurrentIndicators.tsx  SubmitButton.tsx  (+3 more)
frontend/src/lib/: gamepad.tsx  gamepadContext.tsx  types.tsx  webSocket.tsx
frontend/src/pages/: Debug.tsx  Redirect.tsx
osm/: check_maps.py  config.json  utah.qgs
srv/: 502.html
(+7 files in other folders)
