[project]
name = "backend"
version = "0.1.0"
description = "basestation backend"
authors = [{ name = "ryleu", email = "69326171+ryleu@users.noreply.github.com" }]
requires-python = "~=3.10"
dependencies = [
    "aiohttp>=3.11.11,<4",
    "empy>=3.3.4,<4",
    "catkin-pkg>=1.0.0,<2",
    "lark>=1.2.2,<2",
    "coloredlogs>=15.0.1,<16",
    "crccheck>=1.3.0",
    "numpy (>=2.2.4,<3.0.0)",
]

[project.scripts]
start = "backend:start"
test_client = "tests:test_client"
test_rover = "tests:test_rover"
list_types = "tests:list_types"

[dependency-groups]
dev = [
    "pylance>=0.22.0",
    "black>=24.10.0",
]

[tool.hatch.build.targets.sdist]
include = ["./interfaces/install/astra_msgs/lib/python3.10/site-packages/astra_msgs"]

[tool.hatch.build.targets.wheel]
include = ["./interfaces/install/astra_msgs/lib/python3.10/site-packages/astra_msgs"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
